--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "dependencies": {
     "antd": "^3.10.5",
+    "async-waterfall": "^0.1.5",
     "axios": "^0.18.0",
+    "ethereumjs-tx": "^1.3.7",
     "react": "^16.6.1",
     "react-dom": "^16.6.1",
     "react-scripts": "2.1.1",
