--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "ethereumjs-tx": "^1.3.7",
     "react": "^16.6.1",
     "react-dom": "^16.6.1",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
     "react-web3": "^1.1.2",
     "react-web3-provider": "^1.1.1"
